<resources>
    <string name="app_name">IELTS Speaking</string>
    <string name="ielts_speaking">IELTS Speaking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="listening">LISTENING</string>
    <string name="reading">READING</string>
    <string name="speaking">SPEAKING</string>
    <string name="writing">WRITING</string>
    <string name="overall_band_score">Overall Band Score</string>
    <string name="part_1_topics">Part 1 - Topics</string>
    <string name="part_2_topics">Part 2 - Topics</string>
    <string name="learned">Learned</string>
    <string name="part_1">Part 1</string>
    <string name="part_2">Part 2</string>
    <string name="part_3">Part 3</string>
    <string name="sample_answer">Sample answer</string>
    <string name="about_application">This application is made for those who wants to improve their speaking skills.</string>
    <string name="about_application2">Sample answers and sample video answers are the best tools for users. Especially, Recording voice aspects is one of the great ways of testing yourself.</string>
    <string name="about_application3">Hope you enjoy using application.</string>
    <string name="about_application4">I really hope you rate us 5 stars.</string>
    <string name="version">Version:</string>
    <string name="version_number">1.0.0</string>
    <string name="released">Released:</string>
    <string name="released_time">10.10.2022</string>
    <string name="target">Target:</string>
    <string name="target_item">IELTS Speaking</string>
    <string name="goals">Goals:</string>
    <string name="goal1">1. Improve Speaking</string>
    <string name="goal2">2. Improve Pronunciation</string>
    <string name="goal3">3. Increase Vocabulary</string>
    <string name="sample_answer_band_9">Sample answer\n Band 9</string>
    <string name="sample_answer_band_8">Sample answer\n Band 8</string>
    <string name="sample_answer_band_7">Sample answer\n Band 7</string>
    <string name="sample_answer_band_6">Sample answer\n Band 6</string>
    <string name="workQ1">What do you do?</string>
    <string name="workA1">For the past few months, I\’ve been working for The Guardian as a news editor. This is my first job ever, and I\’m working hard to contribute to the success of this prestigious newspaper.</string>
    <string name="workQ2">What are your responsibilities?</string>
    <string name="workA2">As a part-time editor, I am responsible for editing news related to current affairs as well as collecting information for the newspaper edition.</string>
    <string name="workQ3">Why did you choose to do that type of work (or, that job)?</string>
    <string name="workA3">I guess it\’s mainly because of job flexibility and my passion for journalism. To be more specific, this job is unlike the nine-to-five work schedule, enabling me to find a better balance between work and life. Besides, this job gives me opportunities to pursue my dream to become a journalist.</string>
    <string name="workQ4">Is there some other kind of work you would rather do?</string>
    <string name="workA4">At present, I don\’t think I\’m able to dedicate myself to any other job. It\’s the experiences and opportunities I can gain that matters to me.</string>
    <string name="workQ5">Describe the company or organization you work for.</string>
    <string name="workA5">The Guardian is a national British daily newspaper which offers free access both to current news and an archive of three million stories. In April 2011, MediaWeek reported that The Guardian was the fifth most popular newspaper site in the world. I believe that the Guardian is the inspirational workplace for all people who dream of becoming a journalist.</string>
    <string name="workQ6">Do you enjoy your work?</string>
    <string name="workA6">I do, most of the time. Contributing to the news production for a world-class newspaper gives me a sense of satisfaction and pride. </string>
    <string name="workQ7">What do you like (or dislike) about your job?</string>
    <string name="workA7">Well, the perk of being a news editor is that you\’ll surround yourself with exciting news daily. What I don\’t like about this job is that I have to do a thousand edits to get to the final one that meets the requirement of my boss. Sometimes I feel a bit overloaded with tons of tasks.</string>
    <string name="workQ8">Do you miss being a student?</string>
    <string name="workA8">I missed student life once I got involved in the workplace. I think when I was a student, I had someone to guide me, whereas at work you must guide yourself. The academic environment was a comfort zone, and I struggled to fit in the working environment.</string>
    <string name="studyQ1">Do you work or study?</string>
    <string name="studyA1">I am currently studying. I am in the 11th semester and my major is economics.</string>
    <string name="studyQ2">Where do you study?</string>
    <string name="studyA2">I study in the (…university name…). It is one of the best private universities in our country. My major is Economics.</string>
    <string name="studyQ3">What is the name of your college (or university)?</string>
    <string name="studyA3">The name of my university is (…say the full name of your university…). It is more popularly known as (…name that people call it in short…).</string>
    <string name="studyQ4">What subject are you studying?</string>
    <string name="studyA4">My major is Economics. I completed my school majoring commerce and studying in Economics was a long dream for me.</string>
    <string name="studyQ5">Which part of the course do you enjoy most?</string>
    <string name="studyA5">I enjoy learning new things in every semester. The project works in each semester is the part I enjoy most. These projects enable me to work in a group and hands on the theories I learn throughout the semester.</string>
    <string name="studyQ6">Why did you choose to study that?</string>
    <string name="studyA6">Honestly, I did not particularly select this subject. I attended the university admission test in commerce faculty and based on my performance on the exam and interview with the faculty members, I was offered this subject from their end. I wanted to study in commerce faculty and now I feel very lucky that I was offered this major.</string>
    <string name="studyQ7">Is it a difficult subject to study?</string>
    <string name="studyA7">In a general sense, this subject requires extensive study, research, group works and other academic activities. Things are new and challenging in many cases but I think with passion and dedication it can be conquered. To me, it is a difficult yet very enjoyable subject.</string>
    <string name="studyQ8">What is your favourite subject?</string>
    <string name="studyA8">Economics without any doubt is my favourite subject. I am very fascinated to discover the connection of this subject in our everyday life and the global economic structure has made it more complex yet more intriguing. I love to explore different theories and researches done on this subjects and how economics is all around us.</string>
    <string name="studyQ9">What kind of school did you go to?</string>
    <string name="studyA9">In my early childhood, I studied in a local English medium school and then was shifted to a government school by my parents when I was in grade 7. I was in a cantonment college and I have finished my twelve class degree from there. Now I am studying at a large university which is one of the best public universities in my country.</string>
    <string name="studyQ10">What was your favourite subject at school?</string>
    <string name="studyA10">Organisational behaviour, microeconomics were my two most favourite subjects so far. These two subjects have built my base and love for the whole course and I still find it fascinating.</string>
    <string name="studyQ11">What is the best thing about your university/school?</string>
    <string name="studyA11">I love my university life. The classes, friends, teachers, university life, my freedom to do so many things and my participation in some charity works organised by the university are equally important to me. If I have to select one best thing about my university, I would choose my exposure to a diverse culture and academic life that has motivated and inspired me to do even better than I initially thought. I was exposed to a life and era that was unimaginable to me and that is the best part of my university life so far.</string>
    <string name="studyQ12">What part of university life do you like best?</string>
    <string name="studyA12">Well, I think my previous answer already covers this answer. However, I would say I enjoy most of my university life and my exposure to a whole new culture that I never imagined is the best part of my university life. My university life offers me a vision for my future and potential jobs sectors and I think this is the best part.</string>
    <string name="studyQ13">What is the educational system like in your country?</string>
    <string name="studyA13">I am glad that you asked this question. In our country, the primary education is mandatory for all and it is funded by the government unless someone wants to send his kids to a private English medium school. The secondary and tertiary education systems are also managed and run by the government and private organisations. The government controlled educational institutes are less costly and the curriculums are presented and monitored by the education board. On the other hand, the private educational institutes are bound to include some of the national curriculums and they mostly follow their own syllabus. In all universities and in many colleges, higher education is offered in English. The technical and vocational colleges and universities are also popular in our country and they mostly offer certification and degree in selected technical and practical skill related fields. The private universities are approved by the Government controlled bodies and they have to follow their rules very strictly. I am happy to see many changes brought to our educational system in the last few years and innovation and quality modern education is a vision our country has already started implementing.</string>
    <string name="studyQ14">What are your future study plans?</string>
    <string name="studyA14">It will take me 7 months more or so to finish my graduation and then I will try to get admitted to a foreign university which has a reputation for better education. There I will complete my Master\’s degree and would get involved in a job. Besides doing the job I have plans to get enrolled in a professional MBS course to further my education. If time allows, I also wish to do some research based courses related to my academic background and interest.</string>
    <string name="studyQ15">What kind of job would you prefer after graduation?</string>
    <string name="studyA15">I would prefer to work in a multinational company which will offer me a position related to my academic background and have a positive working environment to learn and explore new things. I would not worry too much about my designation and salary initially but the company must have sufficient scope for career enhancement.</string>
    <string name="studyQ16">What is your career plan after you graduate?</string>
    <string name="sample_answer_part1">Sample answer is shown here. It doesn\'t matter how much line it requires, it should show all line</string>
    <string name="part_2_sample_answer">Part 2 sample answer</string>
</resources>