<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E0E0"
    android:orientation="vertical"
    tools:context=".home.category.test_yourself.TestYourselfFragment">

    <Button
        android:id="@+id/btnBand6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:background="@drawable/bg_band_6"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sample_answer_band_6"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnBand7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:background="@drawable/bg_band_7"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sample_answer_band_7"
        android:lines="2"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnBand8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:background="@drawable/bg_band_8"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sample_answer_band_8"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnBand9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:background="@drawable/bg_band_9"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sample_answer_band_9"
        android:textColor="@color/white"
        android:textSize="24sp" />

 </LinearLayout>