<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E0E0"
    android:orientation="vertical"
    tools:context=".home.category.test_yourself.TestYourselfFragment">

    <Button
        android:id="@+id/btnPart1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg_part1_test_yourself"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/part_1"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btnPart2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg_part2_test_yourself"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/part_2"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btnPart3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg_part3_test_yourself"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/part_3"
        android:textColor="@color/white"
        android:textSize="26sp" />

</LinearLayout>