<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_blue"
    tools:context=".home.category.part2Topic.question.answer.Part2AnswersFragment">

    <TextView
        android:id="@+id/tvP2QuestionHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingBottom="5dp"
        android:text="@string/part_2_sample_answer"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/background_dark_blue"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPart2Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvP2QuestionHeading">

        <TextView
            android:id="@+id/tvPart2Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="This place is for question field"
            android:textColor="@color/background_dark_blue"
            android:textSize="22sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPart2Question">

        <TextView
            android:id="@+id/tvPart2Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_part1_answers"
            android:fontFamily="@font/roboto_italic"
            android:padding="20dp"
            android:text="@string/sample_answer_part1"
            android:textColor="@color/main_text_color"
            android:textSize="18sp" />

    </ScrollView>

    <Button
        android:id="@+id/btnPart1LearnedInside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:background="@drawable/rectangle_learned_button_disabled"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/learned"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>